refactor: change HttpPostClient to receive an object

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,7 @@
   "rules": {
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/no-unused-vars": "off"
   }
 }
