--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "eslint": "^8.30.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
@@ -32,6 +34,8 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "axios": "^1.2.1"
+    "axios": "^1.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
