--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.1.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
