--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-standard": "^5.0.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
