--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@testing-library/react": "^13.4.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
