--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "jest-localstorage-mock": "^2.4.25",
     "lint-staged": "^13.1.0",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.0",
