--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "history": "^5.3.0"
   },
   "dependencies": {
     "axios": "^1.2.1",
