--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "check": "npx npm-check -u -s"
   },
   "keywords": [],
   "author": "",
@@ -23,21 +24,22 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
     "eslint": "^8.30.0",
-    "eslint-config-standard-with-typescript": "^11.0.1",
+    "eslint-config-standard-with-typescript": "^26.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-standard": "^5.0.0",
-    "husky": "^8.0.2",
+    "history": "^5.3.0",
+    "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "jest-localstorage-mock": "^2.4.25",
+    "jest-localstorage-mock": "^2.4.26",
     "lint-staged": "^13.1.0",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.0",
@@ -47,8 +49,7 @@
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1",
-    "history": "^5.3.0"
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "axios": "^1.2.1",
