--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "clean-webpack-plugin": "^4.0.0",
+    "coveralls": "^3.1.1",
     "css-loader": "^6.7.3",
     "eslint": "^8.30.0",
     "eslint-config-standard-with-typescript": "^26.0.0",
