--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
     "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
+    "test:cypress": "cypress open",
     "prepare": "husky install",
     "check": "npx npm-check -u -s"
   },
@@ -17,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^5.4.5",
     "@faker-js/faker": "^7.6.0",
     "@testing-library/react": "^13.4.0",
     "@types/axios": "^0.14.0",
@@ -29,7 +31,9 @@
     "clean-webpack-plugin": "^4.0.0",
     "coveralls": "^3.1.1",
     "css-loader": "^6.7.3",
+    "cypress": "^8.4.0",
     "eslint": "^8.30.0",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-config-standard-with-typescript": "^26.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
