--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@types/react-router-dom": "^5.3.3",
+    "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "clean-webpack-plugin": "^4.0.0",
     "coveralls": "^3.1.1",
@@ -60,7 +60,7 @@
   "dependencies": {
     "axios": "^1.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.1"
+    "react-router-dom": "^5.2.0",
+    "react-dom": "^18.2.0"
   }
 }
