--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.4.5",
     "@faker-js/faker": "^7.6.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^29.2.4",
@@ -33,8 +34,8 @@
     "css-loader": "^6.7.3",
     "cypress": "^8.4.0",
     "eslint": "^8.30.0",
-    "eslint-plugin-cypress": "^2.11.1",
     "eslint-config-standard-with-typescript": "^26.0.0",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
@@ -60,7 +61,7 @@
   "dependencies": {
     "axios": "^1.2.1",
     "react": "^18.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.2.0"
   }
 }
