--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/comma-spacing": "off",
     "@typescript-eslint/prefer-nullish-coalescing": "off",
+    "@typescript-eslint/no-floating-promises": "off",
     "@typescript-eslint/return-await": "off",
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
