--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,10 @@ node_js:
 script:
   - eslint 'src/**'
   - npm run test:coveralls
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN 
+  keep_history: true
+  on:
+    branch: main
