--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 script:
   - eslint 'src/**'
   - npm run test:coveralls
-build:
+deploy:
   provider: heroku
   skip_cleanup: true
   app: forves-react
